--- a/djangotest1/static/base.css
+++ b/djangotest1/static/base.css
@@ -21,7 +21,7 @@ ul.navbar-right {
 
 div.footer {
     margin-top: 3em;
-    background-color: #eee;
+    background-color:#ccc;
     color: #555;
 }
 div.website-info {
