--- a/djangotest1/templates/blog/article_list.html
+++ b/djangotest1/templates/blog/article_list.html
@@ -17,7 +17,7 @@
 <div class="header-banner">
         <div class="container">
             <h1>博客列表</h1>
-            <p>只为混毕设，发表<span class="hidden-xs">个人原创</span>高质量的技术博客</p>
+            <p>只为发表<span class="hidden-xs">个人原创</span>高质量的技术博客</p>
             <p>刘俊的博客</p>
         </div>
     </div>
