--- a/djangotest1/templates/blog/home.html
+++ b/djangotest1/templates/blog/home.html
@@ -15,12 +15,13 @@
 <div class="header-banner">
         <div class="container" >
             <h1>J.Liu Blog</h1>
-            <p>只为混毕设，发表<span class="hidden-xs">个人原创</span>高质量的技术博客</p>
-            <p>刘俊的博客</p>
+            <p>博学  慎思  明辨  笃行</p>
+            <p>只为发表<span class="hidden-xs">个人原创</span>的技术博客</p>
+            
         </div>
 </div>
-
-    <div class="container">
+    <div class="bg">
+    <div class="container" >
     <div class="content-item">
          <h3 class="content-item-title">
             <span class="glyphicon glyphicon-pencil"></span>
@@ -89,6 +90,7 @@
                     </div>                                    
     <!-- 图表容器 DOM -->
 
+    </div>
     </div>
     </div>
     </div>
