--- a/djangotest1/templates/base.html
+++ b/djangotest1/templates/base.html
@@ -1,4 +1,4 @@
-    {% load staticfiles %} 
+{% load staticfiles %} 
 {% load notifications_tags %}
 <!DOCTYPE html>
 <html lang="zh-CN">
@@ -65,7 +65,7 @@
                                 <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a href="{% url 'user_info' %}">个人资料</a></li>
+                                <li><a href="{% url 'user_info' %}">个人中心</a></li>
                                 <li><a href="{% url 'my_notifications' %}">我的消息<span class="badge unread-count live_notify_badge">{% if unread_count > 0 %}{{ unread_count }}{% endif %}</span></a></li>
                                 <li><a href="{% url 'change_password' %}">修改密码</a></li>
                                 {% if user.is_staff or user.is_superuser %}
@@ -75,14 +75,15 @@
                             </ul>
                         </li>
                     {% endif %}
-                    <li>
-                        <form class="navbar-form search-form" style="margin-right: -2em;action="{% url 'search' %}">
+                        <li>
+                        <form class="navbar-form search-form" style="margin-right: -2em;" action="{% url 'search' %}" >
                             <div class="form-group">
                                 <input type="text" name="wd" class="form-control" placeholder="Search">
                             </div>
                             <button type="submit" class="btn btn-default">
                                 <span class="glyphicon glyphicon-search"></span>
                             </button>
+
                         </form>
                     </li>
                 </ul>
@@ -121,7 +122,7 @@
                         },
                 weixin: {name:"微信", desc: "技术交流询问", 
                          icon: "/static/img/icon/weixin.png",
-                         qrimg: "/static/img/qr/local.jpg"
+                         qrimg: "/static/img/qr/weixin.jpg"
                         }    
             }
         };
